--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.jpa.show-sql=true
 
 # QUEBRAR A EXIBIÇÃO DA INSTRUÇÃO SQL EM VÁRIAS LINHAS
 spring.jpa.properties.hibernate.format_sql=true
+
+server.error.include-message=always
+server.error.include-stacktrace=always
