--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,4 @@ spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-message=always
 server.error.include-stacktrace=always
+server.error.include-binding-errors=always
