--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,10 @@ spring.jpa.show-sql=true
 # QUEBRAR A EXIBIÇÃO DA INSTRUÇÃO SQL EM VÁRIAS LINHAS
 spring.jpa.properties.hibernate.format_sql=true
 
+# DEFININDO USUÁRIO E SENHA
+spring.security.user.name=geovani
+spring.security.user.password=123456
+
 server.error.include-message=always
 server.error.include-stacktrace=always
 server.error.include-binding-errors=always
